attempted fix for hamburger menu on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,9 @@ body {
 	position: relative;
 	left: -50%;
 }
-
+.dropdown-backdrop {
+    position: static;
+}
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
